[project]
name = "lrecon"
version = "3.2.0"
description = "External attack-surface recon orchestrator for authorized pentests"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "dnspython>=2.6",
    "rich>=13.0",
    "mmh3>=4.0",
]

[project.scripts]
lrecon = "lrecon.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lrecon*"]

[project.optional-dependencies]
screenshots = ["playwright>=1.40"]
